networking/traefik-lan/sauvage-bot-lan.yaml
apiVersion: v1
kind: Service
metadata:
  name: sauvage-bot-ext
  namespace: traefik-lan
spec:
  type: ExternalName
  externalName: sauvage-bot.sauvage-bot.svc.cluster.local
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sauvage-bot-strip-auth-headers
  namespace: traefik-lan
spec:
  headers:
    customRequestHeaders:
      Authorization: ""
      X-Auth-Request-Email: ""
      X-Auth-Request-Groups: ""
      X-Auth-Request-User: ""
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lan-sauvage-bot
  namespace: traefik-lan
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sauvage-bot.lan.e-dani.com`)
      middlewares:
        - name: sauvage-bot-strip-auth-headers
        - name: sso-chain
          namespace: keycloak
      services:
        - name: sauvage-bot-ext
          port: 8080
  tls:
    store:
      name: default
      namespace: traefik-lan
